--- a/15-viz.tex
+++ b/15-viz.tex
@@ -125,15 +125,13 @@ myData = [
 \index{Visualization!networks}
 \index{Visualization!page rank}
 
-In this application, we will perform some of the functions of a search
-engine.   We will first spider a small subset of the web and then run
-a simplified version of the Google page rank algorithm to
-determine which pages are most highly connected and then visualize
-the page rank and connectivity of our small corner of the web.
-We will use the D3 JavaScript visualization library 
-\url{http://d3js.org/} to produce the visualization output.
+이번 응용프로그램에서 약간의 검색엔진 기능을 수행한다.
+먼저 웹의 일부분을 스파이더링하고 어느 페이지가 가장 많이 연결되어 결정하기 위해서
+간략한 구글 페이지 랭크 알고리즘을 실행하고
+스파이더링한 웹의 작은 부분의 연결성과 페이지 랭크를 시각화한다. 
+시각화 산출물을 만들기 위해서 D3 자바스크립트 시각화 라이브러리 \url{http://d3js.org/}를 사용한다.
 
-You can download and extract this application from:
+응용프로그램을 다음 url에서 다운로드 받아 압축을 푼다.
 
 \url{www.py4inf.com/code/pagerank.zip}
 
@@ -141,11 +139,8 @@ You can download and extract this application from:
 \centerline{\includegraphics[height=2.25in]{figs2/pagerank.eps}}
 \afterfig
 
-The first program ({\bf spider.py}) program crawls a web 
-site and pulls a series of pages into the
-database ({\bf spider.sqlite}), recording the links between pages.
-You can restart the process at any time by removing the 
-{\bf spider.sqlite} file and re-running {\bf spider.py}.
+첫 프로그램({\bf spider.py})은 웹사이트를 크롤(craw)하고 일련의 페이지를 뽑아내서 데이터베이스({\bf spider.sqlite})에 넣어서 페이지들간의 링크를 기록한다. 
+언제라도 {\bf spider.sqlite}  파일을 제거하고 {\bf spider.py}를 재실행함으로써 프로세스를 다시 시작할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -158,11 +153,12 @@ How many pages:
 \end{verbatim}
 \afterverb
 %
-In this sample run, we told it to crawl a website and retrieve two 
-pages.  If you restart the program and tell it to crawl more
-pages, it will not re-crawl any pages already in the database.  Upon 
-restart it goes to a random non-crawled page and starts there.  So 
-each successive run of {\bf spider.py} is additive.
+
+샘플 실행결과, 웹사이트를 크롤하고 두개의 페이지를 가져왔다.
+프로그램을 다시 실행하고 좀더 많은 웹페이지를 크롤하게 한다면,
+데이터베이스에 이미 등로된 어떤 페이지도 다시 크롤하지는 않는다.
+재시작할 때 무작위로 크롤하지 않은 페이지로 가서 그곳에서 시작한다.
+그래서 {\bf spider.py}을 연속적으로 실행은 추가적이다.
 
 \beforeverb
 \begin{verbatim}
@@ -176,13 +172,12 @@ How many pages:
 \end{verbatim}
 \afterverb
 %
-You can have multiple starting points in the same database - 
-within the program these are called ``webs''.   The spider
-chooses randomly amongst all non-visited links across all
-the webs as the next page to spider.
 
-If you want to dump the contents of the {\bf spider.sqlite} file, you can 
-run {\bf spdump.py} as follows:
+같은 데이터베이스에서 다중 시작 지점을 가질 수 있다.
+프로그램 내부에서 ''웹(web)''이라고 부른다.
+스파이더는 다음 웹 페이지로 모든 웹사이트에서 방문하지 않는 링크 중에 무작위로 선택한다. 
+
+{\bf spider.sqlite} 파일의 내용을 살펴보고자 한다면, 다음과 같이 {\bf spdump.py}을 실행한다.
 
 \beforeverb
 \begin{verbatim}
@@ -194,13 +189,12 @@ run {\bf spdump.py} as follows:
 \end{verbatim}
 \afterverb
 %
-This shows the number of incoming links, the old page rank, the new page
-rank, the id of the page, and the url of the page.  The {\bf spdump.py} program
-only shows pages that have at least one incoming link to them.
 
-Once you have a few pages in the database, you can run page rank on the
-pages using the {\bf sprank.py} program.  You simply tell it how many page
-rank iterations to run.
+인입 링크 수, 이전 페이지 랭크, 신규 페이지 랭크, 페이지 id, 페이지 url을 보여준다.
+{\bf spdump.py} 프로그램은 최소한 하나의 인입 링크가 있는 페이지만을 보여준다.
+
+데이터베이스에 몇개의 페이지가 있다면, {\bf sprank.py} 프로그램을 실행하여
+페이지의 페이지 랭크를 실행한다. 단순하게 얼마나 많은 페이지랭크 반복을 수행할지 지정한다.
 
 \beforeverb
 \begin{verbatim}
@@ -211,7 +205,8 @@ How many iterations:2
 \end{verbatim}
 \afterverb
 %
-You can dump the database again to see that page rank has been updated:
+
+데이터베이스를 다시 열어서 페이지 랭크가 갱신되었는지 확인한다.
 
 \beforeverb
 \begin{verbatim}
@@ -223,14 +218,14 @@ You can dump the database again to see that page rank has been updated:
 \end{verbatim}
 \afterverb
 %
-You can run {\bf sprank.py} as many times as you like and it will simply refine
-the page rank each time you run it.  You can even run {\bf sprank.py} a few times
-and then go spider a few more pages sith {\bf spider.py} and then run {\bf sprank.py}
-to re-converge the page rank values.  A search engine usually runs both the crawling and 
-ranking programs all the time.
 
-If you want to restart the page rank calculations without re-spidering the 
-web pages, you can use {\bf spreset.py} and then restart {\bf sprank.py}.
+{\bf sprank.py}를 원하는 만큼 실행하고, 실행할 때마나 페이지 랭크를 정교화한다.
+{\bf sprank.py}을 몇번 실행하고나서 {\bf spider.py}으로 좀더 많은 페이지를 스파이더링하고 나서
+{\bf sprank.py}을 실행하여 페이지 랭크 값을 다시 수렴하여 갱신한다. 검색엔진은 일반적으로 동시에
+크롤링과 랭킹 프로그램을 실행한다.
+
+웹페이지를 다시 스파이더링하지 않고, 페이지 랭크 계산을 재시작하고자 한다면,
+{\bf spreset.py}을 사용하고 나서 {\bf sprank.py}를 다시 시작한다.
 
 \beforeverb
 \begin{verbatim}
@@ -255,17 +250,15 @@ How many iterations:50
 \end{verbatim}
 \afterverb
 %
-For each iteration of the page rank algorithm it prints the average
-change in page rank per page.   The network initially is quite
-unbalanced and so the individual page rank values change wildly between
-iterations.
-But in a few short iterations, the page rank converges.  You
-should run {\bf prank.py} long enough that the page rank values converge.
 
-If you want to visualize the current top pages in terms of page rank,
-run {\bf spjson.py} to read the database and write the data for the 
-most highly linked pages in JSON format to be viewed in a
-web browser.
+페이지 랭크 알고리즘을 매번 반복하면, 페이지 마다 페이지 랭크의 평균 변화를 출력한다.
+초기에 네트워크는 매우 불균형 상태여서 각각의 페이지 랭크 값은 반복할 때마다 요동친다.
+하지만, 짧은 몇번의 반복에서 페이지 랭크는 수렴한다.
+{\bf prank.py}을 충분히 오랜동안 실행해서 페이지 랭크 값이 수렴하게 한다.
+
+페이지 랭크에 대해서 현재 최상위 페이지를 시각화하고자 한다면, 
+{\bf spjson.py}을 실행하여 데이터베이스를 읽고 웹브라우져에서 볼 수 있는 JSON 형식으로 
+가장 많이 연결된 페이지에 대해서 데이터를 쓴다.
 
 \beforeverb
 \begin{verbatim}
@@ -275,73 +268,63 @@ Open force.html in a browser to view the visualization
 \end{verbatim}
 \afterverb
 %
-You can view this data by opening the file {\bf force.html} in your web browser.  
-This shows an automatic layout of the nodes and links.  You can click and 
-drag any node and you can also double click on a node to find the URL
-that is represented by the node.
 
-If you re-run the other utilities, re-run {\bf spjson.py} 
-press refresh in the browser to get the new data from {\bf spider.json}.
+웹브라우져에 {\bf force.html} 파일을 열어서 작업한 데이터를 볼 수 있다.
+자동적인 노드와 링크의 레이아웃을 보여준다. 
+임의의 노드를 클릭하고 끌수 있고, 노드를 더블 클릭해서 노드로 표현된 URL을 확인할 수 있다.
 
-\section{Visualizing mail data}
+만약 다른 유틸리티를 다시 실행하고 하면, {\bf spjson.py}을 다시 실행하고 브라우져의 새로 고치기를 눌러서
+{\bf spider.json}에서 새로운 데이터를 가져온다.
 
-Up to this point in the book, you have become quite familiar with our 
-{\bf mbox-short.txt} and {\bf mbox.txt} data files.   Now it is time to take
-our analysis of e-mail data to the next level.  
 
-In the real world, sometimes you have to pull down mail data from servers
-and that might take quite some time and the data might be inconsistent, 
-error filled and need a lot of cleanup or adjustment.  In this section, we
-work with an application that is the most complex so far and pull down nearly a 
-gigabyte of data and visualize it.
+\section{전자우편 데이터 시각화}
+
+책을 이 지점까지 읽어오면서 
+{\bf mbox-short.txt}과 {\bf mbox.txt} 파일에 매우 친숙해졌을 것이다.
+이제는 전자우편 데이터의 분석을 다음 수준으로 가져갈 때다.
+
+실무에서, 때때로 서버에서 전자우편 데이터를 가져오는 것은
+시간이 많이 걸리고, 가져온 데이터는 오류가 많고, 일관되지 못하고, 많은 보정과 정비가 필요하다.
+이번 장에서, 지금까지 가장 복잡한 응용프로그램을 가지고 거의 1GB 데이터를 추출하여 시각화 작업을 한다.
 
 \beforefig
 \centerline{\includegraphics[height=2.50in]{figs2/wordcloud.eps}}
 \afterfig
 
-You can download this application from:
+응용프로그램을 다음 url에서 다운로드한다.
 
 \url{www.py4inf.com/code/gmane.zip}
 
-We will be using data from a free e-mail list archiving service called 
-\url{www.gmane.org}.  This service is very popular with open-source
-projects because it provides a nice searchable archive of their 
-e-mail activity.  They also have a very liberal policy regarding accessing 
-their data through their API.  They have no rate limits, but ask that you 
-don't overload their service and take only the data you need.  You can read
-gmane's terms and conditions at this page:
+\url{www.gmane.org}의 무료 전자우편 보관 서비스의 데이터를 사용한다.
+전자우편 활동에 대한 멋진 검색가능한 보관 서비스를 제공하기 때문에,
+오픈 소스 프로젝트에서는 매우 인기가 높다.
+API를 통한 데이터 접근에 대해서 매우 자유로운 정책을 유지한다.
+사용량에 대해서 제한은 없지만, 서비스에 너무 많은 부하를 주지 말고 필요한 데이터만 가져가도록 요청한다.
+gmane의 사용조건에 대해서는 다음 페이지를 참조한다.
 
 \url{http://gmane.org/export.php}
 
-{\em It is very important that you make use of the gmane.org data
-responsibly by adding delays to your access of their services and spreading
-long-running jobs over a longer period of time.  Do not abuse this free service
-and ruin it for the rest of us.}
+{\em 서비스 접근에 지연을 추가하거나 좀더 오랜 기간에 걸쳐서 장시간이 소요되는 작업을 분산함으로써
+gmane.org 데이터를 책임감있게 사용하는 것은 매우 중요하다. 무료 서비스를 오용하지 말고, 다른 사용자를 위해서 
+서비스를 파괴하지 말아주세요.}
 
-When the Sakai e-mail data was spidered using this software, it produced nearly 
-a Gigabyte of data and took a number of runs on several days.
-The file {\bf README.txt} in the above ZIP may have instructions as to how
-you can download a pre-spidered copy of the {\bf content.sqlite} file for 
-a majority of the Sakai e-mail corpus so you don't have to spider for 
-five days just to run the programs.  If you download the pre-spidered
-content, you should still run the spidering process to catch up with 
-more recent messages.
+이 프로그램을 사용하여 Sakai 전자우편 주소 데이터를 스파이더링하면, 거의 1 GB의 데이터를 생성하고
+몇일에 걸쳐서 수차례 실행을 해야한다. 
+ZIP 압축파일 내부에 {\bf README.txt}이 어떻게 대부분의 Sakai 전자우편 코퍼스(corpus)를
+다운로드할 수 있는지에 대한 안내서를 하고 있다. 그래서 단지 프로그램을 실행하기 위해서 5일 동안 
+스파이더링을 할 필요는 없다. 이미 스파이더링된 콘텐츠를 다운로드하면, 좀더 최근의 메시지를 가져오기 위해서
+스파이더링 프로세스를 여전히 실행해야 한다.
 
-The first step is to spider the gmane repository.  The base URL 
-is hard-coded in the {\bf gmane.py} and is hard-coded to the Sakai
-developer list.  You can spider another repository by changing that
-base url.   Make sure to delete the {\bf content.sqlite} file if you 
-switch the base url.  
+첫 단계는 gmane 저장소를 스파이더링하는 것이다. 기본 URL은 {\bf gmane.py} 파일과
+Sakai 개발자 리스트에 하드코딩 되었다. 기본 url을 변경함으로써 또다른 저장소를 스파이더링 할 수 있다.
+기본 url을 변경하는 경우 {\bf content.sqlite} 파일을 필히 삭제하세요.
 
-The {\bf gmane.py} file operates as a responsible caching spider in 
-that it runs slowly and retrieves one mail message per second so 
-as to avoid getting throttled by gmane.   It stores all of
-its data in a database and can be interrupted and re-started 
-as often as needed.   It may take many hours to pull all the data
-down.  So you may need to restart several times.
+{\bf gmane.py} 파일은 책임감있는 캐쉬 스파이더로서 작동하고, 천천히 실행되며 1초에 한개의 전자우편
+메시지를 가져와서 gmane에 의해서 작동못하게 되는 것을 피한다.
+데이터베이싀 모든 데이터를 저장하고 필요하면 자주 중단하고 다시 시작할 수 있다.
+모든 데이터를 가져오는데 몇 시간이 걸릴 수 있다. 그래서 여러번 재시작하는 것이 필요하다. 
 
-Here is a run of {\bf gmane.py} retrieving the last five messages of the
-Sakai developer list:
+Sakai 개발자 리스트의 마지막 5개 메시지를 가져오는 {\bf gmane.py}을 실행한 결과다.
 
 \beforeverb
 \begin{verbatim}
@@ -362,39 +345,35 @@ Does not start with From
 \end{verbatim}
 \afterverb
 %
-The program scans {\bf content.sqlite} from one up to the first message number not
-already spidered and starts spidering at that message.  It continues spidering
-until it has spidered the desired number of messages or it reaches a page
-that does not appear to be a properly formatted message.
 
-Sometimes \url{gmane.org} is missing a message.  Perhaps administrators can delete messages
-or perhaps they get lost.   If your spider stops, and it seems it has hit
-a missing message, go into the SQLite Manager and add a row with the missing id leaving
-all the other fields blank and restart {\bf gmane.py}.   This will unstick the 
-spidering process and allow it to continue.  These empty messages will be ignored in the next
-phase of the process.
+프로그램은 1번 부터 이미 스파이더링되지 않는 첫 메시지까지 {\bf content.sqlite}을 스캔하고
+그 메시지에서 스파이더링을 시작한다. 원하는 메시지 숫자를 스파이더링할 때까지 
+계속하거나 잘못된 형식의 메시지가 나오는 페이지에 도달할 때까지 스파이더링을 계속한다.
 
-One nice thing is that once you have spidered all of the messages and have them in 
-{\bf content.sqlite}, you can run {\bf gmane.py} again to get new messages as 
-they get sent to the list.  
+때때로 \url{gmane.org}이 메시지를 잃어버린다. 아마도 관리자가 메시지를 삭제하거나
+아마도 분실했을 것이다. 만약 스파이더가 멈추고 잃어버린 메시지에 부딪치면 
+SQLite 매니저로 가서 다른 모든 행은 공백으로 구성되고 잃어버린 id를 가진 행을 추가하고 
+{\bf gmane.py}을 재시작한다. 이렇게 함으로써 스파이더링 프로세스를 다시 시작하고 계속 진행한다.
+빈 메시지는 다음번 프로세스에서는 무시된다.
 
-The {\bf content.sqlite} data is pretty raw, with an inefficient data model, 
-and not compressed.
-This is intentional as it allows you to look at {\bf content.sqlite}
-in the SQLite Manager to debug problems with the spidering process.
-It would be a bad idea to run any queries against this database as they 
-would be quite slow.
+모든 메시지를 스파이더링하고 {\bf content.sqlite} 파일에 넣게 되면, 
+{\bf gmane.py}을 다시 시작해서 리스트에 보내지게 되면 새로운 메시지를 얻는 것은 멋진 기능이다.
 
-The second process is to run the program {\bf gmodel.py}.  This program reads the rough/raw 
-data from {\bf content.sqlite} and produces a cleaned-up and well-modeled version of the 
-data in the file {\bf index.sqlite}.  The file index.sqlite will be much smaller (often 10X
-smaller) than {\bf content.sqlite} because it also compresses the header and body text.
+{\bf content.sqlite} 데이터는 원데이터 형식이고 비효율적인 데이터 모델과 압축이 되어 있지 않다.
+의도적으로 그렇게 함으로써 SQLite 매니저가 스파이더링 프로세스에서 문제를 디버그할 수 있도록
+{\bf content.sqlite} 파일을 직접 살펴볼 수 있다. 매우 느린 상태에서 데이터베이스에 질의를 실행하는 것은 
+좋은 생각은 아니다.
 
-Each time {\bf gmodel.py} runs - it deletes and re-builds {\bf index.sqlite}, allowing
-you to adjust its parameters and edit the mapping tables in {\bf content.sqlite} to tweak the 
-data cleaning process. This is a sample run of {\bf gmodel.py}.  It prints a line out each time
-250 mail messages are processed so you can see some progress happening as this program may
-run for a while processing nearly a Gigabyte of mail data.
+두번째 프로세스는 {\bf gmodel.py} 프로그램을 실행하는 것이다. 
+{\bf content.sqlite}에서 다듬지 않은 원데이터를 읽어서 {\bf index.sqlite} 파일에 
+깨끗하게 잘 모델링된 형식의 데이터로 저장한다.
+{\bf index.sqlite} 파일은 {\bf content.sqlite} 보다 10배이상 크기가 적다. 왜냐하면 헤더와 본문부문 텍스트를 
+압축하기 때문이다.
+
+{\bf gmodel.py}을 실행할 때마다, {\bf index.sqlite}을 삭제하고 다시 생성해서, 매개변수를 조정하고
+데이터 정비 프로세스를 약간 바꾸기 위해서 {\bf content.sqlite}의 매핑테이블을 편집할 수 있게 한다.
+다음은 {\bf gmodel.py}을 샘플로 실행시킨 것이다. 매번 250개의 전자우편 메시지가 처리될 때마다 한 라인을 
+출력해서 거의 1GB 전자우편 데이터를 처리하는 동안 진행사항을 확인할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -408,12 +387,12 @@ Loaded allsenders 1588 and mapping 28 dns mapping 1
 \afterverb
 %
 
-The {\bf gmodel.py} program handles a number of data cleaning tasks.
+{\bf gmodel.py} 프로그램이 많은 데이터 정비 작업을 처리한다.
 
-Domain names are truncated to two levels for .com, .org, .edu, and .net.
-Other domain names are truncated to three levels.  So si.umich.edu becomes
-umich.edu and caret.cam.ac.uk becomes cam.ac.uk.   Also e-mail addresses are
-forced to lower case and some of the @gmane.org address like the following
+도메인 이름이  .com, .org, .edu, .net에 대해서는 2 단계로 다른 도메인 이름은 3 단계로 잘랐다.
+그래서 si.umich.edu은 umich.edu이 되고, caret.cam.ac.uk은 cam.ac.uk이 된다.
+또한 전자우편 주소는 소문자가 되게 하고, 다음과 같은  @gmane.org 주소는 
+메시지 코퍼스 어딘가 있는 실제 전자우편 주소와 매칭이 되면 실제 주소로 변환한다.
 
 \beforeverb
 \begin{verbatim}
@@ -421,13 +400,10 @@ forced to lower case and some of the @gmane.org address like the following
 \end{verbatim}
 \afterverb
 %
-are converted to the real address whenever there is a matching real e-mail
-address elsewhere in the message corpus.
 
-If you look in the {\bf content.sqlite} database there are two tables that allow
-you to map both domain names and individual e-mail addresses that change over 
-the lifetime of the e-mail list.  For example, Steve Githens used the following
-e-mail addresses as he changed jobs over the life of the Sakai developer list:
+{\bf content.sqlite} 데이터베이스를 살펴보면, 도메인 이름과 
+전자우편 주소가 시간에 따라 변경되는 개인 전자우편 주소를 매핑하는 테이블이 두개 있다.
+예를 들어, Sakai 개발자 리스트 개발기간에 걸쳐 직업을 바꿈에 따라 Steve Githens 다음 전자우편 주소를 사용했다.
 
 \beforeverb
 \begin{verbatim}
@@ -437,8 +413,9 @@ swgithen@mtu.edu
 \end{verbatim}
 \afterverb
 %
-We can add two entries to the Mapping table in {\bf content.sqlite} so 
-{\bf gmodel.py} will map all three to one address:
+
+{\bf content.sqlite}의 매핑(Mapping) 테이블에 두 개의 항목을 추가해서 
+{\bf gmodel.py} 프로그램이 3개 주소를 하나로 매핑한다.
 
 \beforeverb
 \begin{verbatim}
@@ -447,8 +424,9 @@ sgithens@cam.ac.uk -> swgithen@mtu.edu
 \end{verbatim}
 \afterverb
 %
-You can also make similar entries in the DNSMapping table if there are multiple
-DNS names you want mapped to a single DNS.  The following mapping was added to the Sakai data:
+
+다중 DNS 이름을 하나의 DNS 이름으로 매핑하려면 DNSMapping 테이블에 비슷한 항목을 생성할 수 있다.
+다음 매핑이 Sakai 데이터에 추가된다.
 
 \beforeverb
 \begin{verbatim}
@@ -456,15 +434,13 @@ iupui.edu -> indiana.edu
 \end{verbatim}
 \afterverb
 %
-So all the accounts from the various Indiana University campuses are tracked together.
 
-You can re-run the {\bf gmodel.py} over and over as you look at the data, and add mappings
-to make the data cleaner and cleaner.   When you are done, you will have a nicely
-indexed version of the e-mail in {\bf index.sqlite}.   This is the file to use to do data
-analysis.   With this file, data analysis will be really quick.
+그래서, 다양한 인디애나 대학교 캠퍼스의 모든 계정이 함께 추적된다.
 
-The first, simplest data analysis is to determine "who sent the most mail?" and "which 
-organization sent the most mail"?  This is done using {\bf gbasic.py}:
+데이터를 볼 때마다, {\bf gmodel.py}를 반복적으로 실행하고 데이터를 좀더 깨끗하게 만들기 위해서 매핑을 추가한다. 작업이 마쳐지면, {\bf index.sqlite}에 잘 인덱스된 버젼의 전자우편 데이터가 있다.
+이 파일이 자료 분석을 위해 사용되는 파일이다. 이 파일로 데이터분석은 정말 빠르게 수행된다.
+
+첫, 가장 간단한 자료 분석은 ''누가 가장 많은 전자우편을 보냈는가?''와 ''어느 조직에서 가장 많은 전자우편을 보냈는가?''를 알아보는 것이다. {\bf gbasic.py}을 사용해서 수행할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -487,16 +463,12 @@ unicon.net 2055
 \end{verbatim}
 \afterverb
 %
-Note how much more quickly {\bf gbasic.py} runs compared to {\bf gmane.py}
-or even {\bf gmodel.py}. They are all working on the same data, but 
-{\bf gbasic.py} is using the compressed and normalized data in 
-{\bf index.sqlite}.  If you have a lot of data to manage, a multi-step
-process like the one in this application may take a little longer to develop,
-but will save you a lot of time when you really start to explore
-and visualize your data.
 
-You can produce a simple visualization of the word frequency in the subject lines
-in the file {\bf gword.py}:
+{\bf gmane.py}이나 혹은 {\bf gmodel.py}과 비교하여 {\bf gbasic.py}이 얼마나 빨리 실행되는지 주목하세요.
+모두 동일한 데이터에서 작업을 수행하지만, {\bf gbasic.py}은 {\bf index.sqlite}에 저장된 압축되고 정규화된 데이터를 사용한다. 다룰 데이터가 많다면, 이번과 같은 응용프로그램처럼 다중 단계 프로세스가
+개발에는 약간 더 시간이 걸리지만, 데이터를 탐색하고 시각화할 때는 많이 시간을 절약해 준다. 
+
+{\bf gword.py} 파일에 주제 라인의 단어 빈도를 간략히 시각화할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -506,12 +478,10 @@ Output written to gword.js
 \afterverb
 %
 
-This produces the file {\bf gword.js} which you can visualize using
-{\bf gword.htm} to produce a word cloud similar to the one at the beginning 
-of this section.
+이번 장의 처음의 것과 유사한 워드 클라우드를 생성하기 위해서 
+{\bf gword.htm}를 사용하여 시각화할 {\bf gword.js} 파일을 생성한다.
 
-A second visualization is produced  by {\bf gline.py}.  It computes e-mail 
-participation by organizations over time.
+두번째 시각화는 {\bf gline.py}으로 생성된다. 시간에 따른 조직별 전자우편 참여를 연산한다.
 
 \beforeverb
 \begin{verbatim}
@@ -524,11 +494,11 @@ Output written to gline.js
 \end{verbatim}
 \afterverb
 %
-Its output is written to {\bf gline.js} which is visualized using {\bf gline.htm}.
+
+출력값은 {\bf gline.htm}을 사용하여 시각화된 {\bf gline.js}에 쓰여진다.
 
 \beforefig
 \centerline{\includegraphics[height=2.50in]{figs2/mailorg.eps}}
 \afterfig
 
-This is a relatively complex and sophisticated application and 
-has features to do some real data retrieval, cleaning and visualization.
+상대적으로 복잡하고 정교한 응용프로그램으로 실제 데이터를 가져오고, 정비하고, 시각화하는 기능을 갖고 있다.
